hphp/test/zend/bad/ext/reflection/tests/016.php
<?php
$ext = new ReflectionExtension("xml");
$deps = $ext->getDependencies();
var_dump($deps);
?>
